Added image url and file name

--- a/Views/TCAdminCrons.Controllers/Crons/Minecraft.cshtml
+++ b/Views/TCAdminCrons.Controllers/Crons/Minecraft.cshtml
@@ -50,6 +50,10 @@
                         <dd>@Html.TextAreaFor(m => m.VanillaSettings.Description, new {@class = "k-textbox", style = "height: 100px"})</dd>
                         <dt>@Html.LabelFor(m => m.VanillaSettings.Group)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.Group)</dd>
+                        <dt>@Html.LabelFor(m => m.VanillaSettings.FileName)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.VanillaSettings.ImageUrl)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.VanillaSettings.SnapshotGroup)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.SnapshotGroup)</dd>
                         <dt>@Html.LabelFor(m => m.VanillaSettings.UseVersionAsViewOrder)</dt>
@@ -71,6 +75,10 @@
                         <dd>@Html.TextAreaFor(m => m.BukkitSettings.Description, new {@class = "k-textbox", style = "height: 100px"})</dd>
                         <dt>@Html.LabelFor(m => m.BukkitSettings.Group)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.Group)</dd>
+                        <dt>@Html.LabelFor(m => m.BukkitSettings.FileName)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.BukkitSettings.ImageUrl)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.BukkitSettings.UseVersionAsViewOrder)</dt>
                         <dd>@Html.Kendo().SwitchFor(m => m.BukkitSettings.UseVersionAsViewOrder)</dd>
                         <dt>@Html.LabelFor(m => m.BukkitSettings.GetLastReleaseUpdates)</dt>
@@ -88,6 +96,10 @@
                         <dd>@Html.TextAreaFor(m => m.PaperSettings.Description, new {@class = "k-textbox", style = "height: 100px"})</dd>
                         <dt>@Html.LabelFor(m => m.PaperSettings.Group)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.Group)</dd>
+                        <dt>@Html.LabelFor(m => m.PaperSettings.FileName)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.PaperSettings.ImageUrl)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.PaperSettings.UseVersionAsViewOrder)</dt>
                         <dd>@Html.Kendo().SwitchFor(m => m.PaperSettings.UseVersionAsViewOrder)</dd>
                         <dt>@Html.LabelFor(m => m.PaperSettings.GetLastReleaseUpdates)</dt>
@@ -105,6 +117,10 @@
                         <dd>@Html.TextAreaFor(m => m.SpigotSettings.Description, new {@class = "k-textbox", style = "height: 100px"})</dd>
                         <dt>@Html.LabelFor(m => m.SpigotSettings.Group)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.Group)</dd>
+                        <dt>@Html.LabelFor(m => m.SpigotSettings.FileName)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.SpigotSettings.ImageUrl)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.SpigotSettings.UseVersionAsViewOrder)</dt>
                         <dd>@Html.Kendo().SwitchFor(m => m.SpigotSettings.UseVersionAsViewOrder)</dd>
                         <dt>@Html.LabelFor(m => m.SpigotSettings.GetLastReleaseUpdates)</dt>
