Added extract path

--- a/Views/TCAdminCrons.Controllers/Crons/Minecraft.cshtml
+++ b/Views/TCAdminCrons.Controllers/Crons/Minecraft.cshtml
@@ -52,6 +52,8 @@
                         <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.Group)</dd>
                         <dt>@Html.LabelFor(m => m.VanillaSettings.FileName)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.VanillaSettings.ExtractPath)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.ExtractPath)</dd>
                         <dt>@Html.LabelFor(m => m.VanillaSettings.ImageUrl)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.VanillaSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.VanillaSettings.SnapshotGroup)</dt>
@@ -77,6 +79,8 @@
                         <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.Group)</dd>
                         <dt>@Html.LabelFor(m => m.BukkitSettings.FileName)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.BukkitSettings.ExtractPath)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.ExtractPath)</dd>
                         <dt>@Html.LabelFor(m => m.BukkitSettings.ImageUrl)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.BukkitSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.BukkitSettings.UseVersionAsViewOrder)</dt>
@@ -98,6 +102,8 @@
                         <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.Group)</dd>
                         <dt>@Html.LabelFor(m => m.PaperSettings.FileName)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.PaperSettings.ExtractPath)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.ExtractPath)</dd>
                         <dt>@Html.LabelFor(m => m.PaperSettings.ImageUrl)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.PaperSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.PaperSettings.UseVersionAsViewOrder)</dt>
@@ -119,6 +125,8 @@
                         <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.Group)</dd>
                         <dt>@Html.LabelFor(m => m.SpigotSettings.FileName)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.FileName)</dd>
+                        <dt>@Html.LabelFor(m => m.SpigotSettings.ExtractPath)</dt>
+                        <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.ExtractPath)</dd>
                         <dt>@Html.LabelFor(m => m.SpigotSettings.ImageUrl)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.SpigotSettings.ImageUrl)</dd>
                         <dt>@Html.LabelFor(m => m.SpigotSettings.UseVersionAsViewOrder)</dt>
