--- a/Views/TCAdminCrons.Controllers/Crons/MinecraftGameUpdate.cshtml
+++ b/Views/TCAdminCrons.Controllers/Crons/MinecraftGameUpdate.cshtml
@@ -1,22 +1,30 @@
 ﻿@using System.Web.Mvc.Ajax
 @using System.Web.Mvc.Html
+@using Alexr03.Common.Misc.Strings
 @using Alexr03.Common.Web.Helpers
+@using Kendo.Mvc.Extensions
 @using Kendo.Mvc.UI
 @using TCAdmin.SDK.Web.MVC.Extensions
+@using TCAdminCrons
 @using TCAdminCrons.Configuration
-@model TCAdminCrons.Configuration.BukkitSettings
+@model TCAdminCrons.Configuration.GameUpdateSettings
+
+@{
+    var id = TempData["id"].ToString();
+    var configType = Model.GetType();
+}
 
 @using (Ajax.BeginForm(new AjaxOptions {OnSuccess = "TCAdmin.Ajax.ShowBasicDialog('Success', 'Successfully saved Minecraft Automatic Game Update Settings'); document.body.style.cursor = 'default';", OnFailure = "TCAdmin.Ajax.HandleAjaxFailure"}))
 {
     @Html.AntiForgeryToken()
     <div class="primary-toolbar">
         @(Html.Kendo().ToolBar()
-            .Name("BukkitToolBar")
+            .Name("ToolBar".PrefixType(configType))
             .Items(items =>
             {
                 items.Add().Template(this.GetToolbarButton(Resources.Global.Save, "save"));
                 items.Add().Type(CommandType.Button).Icon("cancel").Text(Resources.Global.Cancel).Click("TCAdmin.Ajax.CancelClicked");
-                items.Add().Type(CommandType.Button).Icon("reload").Text("Run Now").Click("function(){runNow(2)}");
+                items.Add().Type(CommandType.Button).Icon("reload").Text("Run Now").Click("function(){runNow(" + id + ")}");
             }))
     </div>
     <div class="primary-content">
@@ -30,18 +38,18 @@
                         <dd>@Html.Kendo().NumericTextBoxFor(m => m.GameId).Format("#")@Html.ValidationMessageFor(m => m.GameId)@Html.TooltipFor(m => m.GameId)</dd>
 
                         <dt>@Html.Label("Repeat Every X Seconds")</dt>
-                        <dd>@Html.Kendo().NumericTextBox().Name("repeatEvery".PrefixType(typeof(BukkitSettings))).Value(int.Parse(TempData["repeatEvery"].ToString())).Format("#")</dd>
+                        <dd>@Html.Kendo().NumericTextBox().Name("repeatEvery".PrefixType(configType)).Value(int.Parse(TempData["repeatEvery"].ToString())).Format("#")</dd>
                     </dl>
                 </li>
                 <li>
-                    <h2>Bukkit Settings</h2>
-                    <dl>
+                    <h2>@configType.Name.SplitEveryCapital()</h2>
+                    <dl style="width: 600px;">
                         <dt>@Html.LabelFor(m => m.Enabled)</dt>
                         <dd>@Html.Kendo().SwitchFor(m => m.Enabled)</dd>
                         <dt>@Html.LabelFor(m => m.NameTemplate)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.NameTemplate)</dd>
                         <dt>@Html.LabelFor(m => m.Description)</dt>
-                        <dd>@Html.TextAreaFor(m => m.Description, new {@class = "k-textbox", style = "height: 100px;width: 400px"})</dd>
+                        <dd>@Html.TextAreaFor(m => m.Description, new {@class = "k-textbox", style = "height: 100px;width:400px;"})</dd>
                         <dt>@Html.LabelFor(m => m.Group)</dt>
                         <dd>@Html.Kendo().TextBoxFor(m => m.Group)</dd>
                         <dt>@Html.LabelFor(m => m.FileName)</dt>
