--- a/Views/TCAdminCrons.Controllers/Crons/MinecraftGameUpdate.cshtml
+++ b/Views/TCAdminCrons.Controllers/Crons/MinecraftGameUpdate.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.Mvc.Ajax
 @using System.Web.Mvc.Html
 @using Alexr03.Common.Misc.Strings
-@using Alexr03.Common.Web.Helpers
+@using Alexr03.Common.Web.Extensions
 @using Kendo.Mvc.Extensions
 @using Kendo.Mvc.UI
 @using TCAdmin.SDK.Web.MVC.Extensions
