--- a/Views/TCAdminCrons.Controllers/Crons/MinecraftGameUpdate.cshtml
+++ b/Views/TCAdminCrons.Controllers/Crons/MinecraftGameUpdate.cshtml
@@ -13,7 +13,7 @@
     var configType = Model.GetType();
 }
 
-@using (Ajax.BeginForm(new AjaxOptions {OnSuccess = "TCAdmin.Ajax.ShowBasicDialog('Success', 'Successfully saved Minecraft Automatic Game Update Settings'); document.body.style.cursor = 'default';", OnFailure = "TCAdmin.Ajax.HandleAjaxFailure"}))
+@using (Ajax.BeginForm(new AjaxOptions {OnSuccess = "Alexr03.Common.HandleAjaxSuccess", OnBegin = "Alexr03.Common.HandleAjaxBegin", OnFailure = "TCAdmin.Ajax.HandleAjaxFailure"}))
 {
     @Html.AntiForgeryToken()
     <div class="primary-toolbar">
